--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "bootstrap": "^5.3.0",
     "firebase": "^9.6.0",
     "node": "^16.20.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^6.0.4",
+    "styled-components.macro": "^1.0.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
